--- a/authentication-service.yaml
+++ b/authentication-service.yaml
@@ -5,12 +5,12 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.35.0 (HEAD)
   labels:
-    io.kompose.service: orders
-  name: orders
+    io.kompose.service: authentication
+  name: authentication
 spec:
   ports:
-    - name: "8001"
-      port: 8001
+    - name: "8004"
+      port: 8004
       targetPort: 3000
   selector:
-    io.kompose.service: orders
+    io.kompose.service: authentication
