--- a/cart-service.yaml
+++ b/cart-service.yaml
@@ -5,12 +5,12 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.35.0 (HEAD)
   labels:
-    io.kompose.service: stock
-  name: stock
+    io.kompose.service: cart
+  name: cart
 spec:
   ports:
-    - name: "8000"
-      port: 8000
+    - name: "8003"
+      port: 8003
       targetPort: 8080
   selector:
-    io.kompose.service: stock
+    io.kompose.service: cart
