--- a/test-order-producer-deployment.yaml
+++ b/test-order-producer-deployment.yaml
@@ -5,30 +5,25 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.35.0 (HEAD)
   labels:
-    io.kompose.service: orders
-  name: orders
+    io.kompose.service: test-order-producer
+  name: test-order-producer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: orders
+      io.kompose.service: test-order-producer
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert
         kompose.version: 1.35.0 (HEAD)
       labels:
-        io.kompose.service: orders
+        io.kompose.service: test-order-producer
     spec:
       containers:
-        - env:
-            - name: MONGODB_URI
-              value: mongodb://mongo:27017/Orders
-            - name: NODE_ENV
-              value: test
-          image: orders
-          name: rso-orders
+        - image: test-order-producer
+          name: rso-test-order-producer
           ports:
-            - containerPort: 3000
+            - containerPort: 8080
               protocol: TCP
       restartPolicy: Always
