--- a/test-order-producer-service.yaml
+++ b/test-order-producer-service.yaml
@@ -5,12 +5,12 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.35.0 (HEAD)
   labels:
-    io.kompose.service: stock
-  name: stock
+    io.kompose.service: test-order-producer
+  name: test-order-producer
 spec:
   ports:
-    - name: "8000"
-      port: 8000
+    - name: "8002"
+      port: 8002
       targetPort: 8080
   selector:
-    io.kompose.service: stock
+    io.kompose.service: test-order-producer
