--- a/templates/mongo-deployment.yaml
+++ b/templates/mongo-deployment.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert
+    kompose.cmd: kompose convert -c -v
+    kompose.service.type: clusterip
     kompose.version: 1.35.0 (HEAD)
   labels:
     io.kompose.service: mongo
@@ -15,7 +16,8 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert
+        kompose.cmd: kompose convert -c -v
+        kompose.service.type: clusterip
         kompose.version: 1.35.0 (HEAD)
       labels:
         io.kompose.service: mongo
