--- a/templates/mongo-deployment.yaml
+++ b/templates/mongo-deployment.yaml
@@ -13,6 +13,8 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: mongo
+  strategy:
+    type: Recreate
   template:
     metadata:
       annotations:
@@ -28,4 +30,11 @@ spec:
           ports:
             - containerPort: 27017
               protocol: TCP
+          volumeMounts:
+            - mountPath: /data/db
+              name: mongo-claim0
       restartPolicy: Always
+      volumes:
+        - name: mongo-claim0
+          persistentVolumeClaim:
+            claimName: mongo-claim0
